# known_map_localization

./: .gitmodules  README.md
cs_merge_methods/: CMakeLists.txt  package.xml
cs_merge_methods/src/: cs_merge_hough_ccr.cpp  cs_merge_hough_corner.cpp  cs_merge_icp_gradient.cpp  cs_merge_icp_svd.cpp
cs_merge_msgs/: CMakeLists.txt  package.xml
cs_merge_msgs/srv/: getTransform.srv  getWorld.srv
known_map_localization/: CMakeLists.txt  README.md  package.xml  rosdoc.yaml
known_map_localization/include/: AlgorithmSelector.h  Algorithms.h  Exception.h  KnownMapLocalization.h  Utils.h
known_map_localization/include/aligning/: Aligner.h  MapmergeAligner.h  MapstitchAligner.h
known_map_localization/include/alignment/: Alignment.h  StampedAlignment.h
known_map_localization/include/base_link/: BaseLinkPublisher.h
known_map_localization/include/filter/: Filter.h  PassThroughFilter.h
known_map_localization/include/known_map_localization/: AlgorithmSelector.h  Algorithms.h  Exception.h  GpsManager.h  KnownMapLocalization.h  SlamScaleManager.h  StatusPublisher.h  Utils.h
known_map_localization/include/known_map_server/: KnownMapServer.h  YAMLConversions.h
known_map_localization/include/preprocessing/: KnownMapPreprocessor.h  MapPreprocessor.h  MapmergeSlamMapPreprocessor.h  MapstitchKnownMapPreprocessor.h  SlamMapPreprocessor.h
known_map_localization/include/visualization/: VisualizationSlamMapPublisher.h
known_map_localization/launch/: cs_merge_hough_ccr.yaml  cs_merge_hough_corner.yaml  cs_merge_icp_gradient.yaml  cs_merge_icp_svd.yaml  kml_morse.launch  kml_node.launch  known_map_localization.launch  mapmerge.yaml  mapstitch.yaml
known_map_localization/launch/algorithms/: cs_merge_icp_gradient.launch  cs_merge_icp_svd.launch  mapmerge.launch  mapstitch.launch
known_map_localization/launch/settings/: cs_merge_icp_gradient.yaml  general.yaml  mapmerge.yaml  mapstitch.yaml
known_map_localization/msg/: GeoPoseStamped.msg  PoseError.msg  Status.msg
known_map_localization/src/: AlgorithmSelector.cpp  GpsManager.cpp  KnownMapLocalization.cpp  SlamScaleManager.cpp  StatusPublisher.cpp  Utils.cpp  known_map_localization_node.cpp
known_map_localization/src/aligning/: Aligner.cpp  CsMergeAligner.cpp  CsMergeHoughCcrAligner.cpp  CsMergeHoughCornerAligner.cpp  CsMergeIcpGradient.cpp  CsMergeIcpGradientAligner.cpp  CsMergeIcpSvdAligner.cpp  MapmergeAligner.cpp  MapstitchAligner.cpp
known_map_localization/src/alignment/: Alignment.cpp  GpsScoredHypothesis.cpp  Hypothesis.cpp  StampedAlignment.cpp
known_map_localization/src/base_link/: BaseLinkPublisher.cpp
known_map_localization/src/factory/: KmlCsMergeFactory.cpp  KmlCsMergeHoughCcrFactory.cpp  KmlCsMergeHoughCornerFactory.cpp  KmlCsMergeIcpGradientFactory.cpp  KmlCsMergeIcpSvdFactory.cpp  KmlFactory.cpp  KmlMapmergeFactory.cpp  KmlMapstitchFactory.cpp
known_map_localization/test/: alignment_test.cpp  base_link_test.cpp  filter_test.cpp  pose_error_test.cpp  slam_scale_manager_test.cpp  test.cpp  utils_test.cpp
known_map_localization_tmp/: CMakeLists.txt  package.xml
mapmerge/: CMakeLists.txt  package.xml
mapmerge/src/: grid_map.cpp  manipulatemap.cpp
mrgs_alignment/: CMakeLists.txt  package.xml
mrgs_alignment/src/: align_node.cpp
mrgs_alignment/srv/: align.srv
mrgs_alignment/test/: test_mrgs_alignment.test  test_node_mrgs_alignment.cpp
scale_investigator/: CMakeLists.txt  package.xml
scale_investigator/launch/: scale_investigator.launch
scale_investigator/src/: ScaleInvestigator.cpp  scale_investigator_node.cpp
(+70 files in other folders)
