<package format="2">
  <name>cs_merge_msgs</name>
  <version>1.0.0</version>
  <description>
  This package defines all messages and services.
  </description>
  <maintainer email="christian.scheiderer@gmail.com">Christian Scheiderer</maintainer>
  <license>MIT</license>
  <url>http://wiki.ros.org/cs_merge</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>

</package>
