<?xml version="1.0"?>
<package>
  <name>mrgs_alignment</name>
  <version>0.0.1</version>
  <description>Modified package mrgs_alignment of Gonçalo Martins. Original package: http://ros.org/wiki/mrgs_alignment</description>

  <author>Gonçalo Martins</author>
  <license>BSD</license>
  <maintainer email="j.seibert@campus.tu-berlin.de">Jacob Seibert</maintainer>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>message_runtime</run_depend>
</package>


